--- a/docker/base/Dockerfile-ubuntu
+++ b/docker/base/Dockerfile-ubuntu
@@ -1,3 +1,5 @@
+# This Dockerfile will build a base image starting with ubuntu that contains Boost, ROSE and IPT.
+
 FROM ubuntu:14.04
 MAINTAINER Alex Marginean "alexandru.marginean.13@ucl.ac.uk"
 
@@ -75,18 +77,6 @@ RUN cd /home/ROSE/BuildFolder/RoseCompileTree && export JAVA_HOME=/usr/lib/jdk1.
 #configure command: ./configure CPPFLAGS="-I/home/ROSE/RoseInstallTree/include/rose -I/home/ROSE/BoostInstallTree/include" LDFLAGS="-L/home/ROSE/RoseInstallTree/lib -L/home/ROSE/BoostInstallTree/lib -L/usr/lib/jdk1.8.0_25/jre/lib/amd64/server" CFLAGS="-O0 -g" CXXFLAGS="-O0 -g"
 RUN ls
 
-#install eclipse
-RUN apt-get update && apt-get install -y libgtk2.0-0 libcanberra-gtk-module
-
-
-#clone eclipse
-RUN cd /home && cp /home/ROSE/BuildFolder/git.sh . && ./git.sh -i /root/.ssh/id_rsa clone gitolite@goa.cs.ucl.ac.uk:projects/retype/eclipse
-
-RUN cd /home && mv eclipse/eclipse.tar.gz . && rm -r eclipse && tar -xzvf eclipse.tar.gz 
-
-RUN echo "/home/eclipse/eclipse -vm /usr/lib/jdk1.8.0_25/jre/bin/java" > /usr/bin/eclipse
-
-RUN chmod +x /usr/bin/eclipse
 
 ENV JAVA_HOME /usr/lib/jdk1.8.0_25
 ENV LD_LIBRARY_PATH /home/ROSE/BoostInstallTree/lib:/usr/lib/jdk1.8.0_25/jre/lib/amd64/server:
@@ -94,16 +84,3 @@ ENV LD_LIBRARY_PATH /home/ROSE/BoostInstallTree/lib:/usr/lib/jdk1.8.0_25/jre/lib
 RUN cp /home/ROSE/BuildFolder/RoseCompileTree/rose_config.h /home/ROSE/RoseInstallTree/include/rose
 
 RUN apt-get update && apt-get install -y gdb gitk
-
-#new user needed for running X server apps
-#RUN echo "developer:x:1000:1000:Developer,,,:/home/development:/bin/bash" >> /etc/passwd && \
-#    echo "developer:x:1000:" >> /etc/group && \
-#    echo "developer ALL=(ALL) NOPASSWD: ALL" > /etc/sudoers.d/developer && \
-#    chmod 0440 /etc/sudoers.d/developer && \
-#    chown developer:developer -R /home/development && \
-#    chown developer:developer -R /home/eclipse && \
-#    chown developer:developer /usr/bin/sudo && chmod 4755 /usr/bin/sudo
-
-
-
-
