--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -17,6 +17,7 @@ django:
     ports:
         - "8000:8000"
     environment:
+        "IPT_INSTANCE": "dev"
         "AGAVE_CLIENT_KEY": "0EbNE3EIss50ffopFR_8djPMYfIa"
         "AGAVE_CLIENT_SECRET":
         "AGAVE_BASE_URL": "https://api.tacc.utexas.edu"
