Comment how to run and override the certs.

--- a/docker/webterm/Dockerfile
+++ b/docker/webterm/Dockerfile
@@ -1,6 +1,8 @@
 # Image: jstubbs/ipt-webterm
 # Terminal with the IPT binary exposed over HTTPS. Launch with:
 #     $ docker run --name term -p 3000 -dt jstubbs/ipt-webterm
+# to use the default self-signed certs or:
+#     $ docker run --name term -p 3000 -dt -v $(pwd)/ssl:/ssl jstubbs/ipt-webterm app.js --sslkey /ssl/ipt-web.tacc.utexas.edu.key --sslcert /ssl/ipt-web.tacc.utexas.edu.bundle.crt -p 3000
 # The terminal will be available over SSH on the mapped port. Login with term/term
 
 from krishnasrinivas/wetty
