--- a/iptweb/Dockerfile-actor
+++ b/iptweb/Dockerfile-actor
@@ -2,9 +2,10 @@
 # The actor used to launch IPT terminals from the web application.
 from abacosamples/base-ubu
 
-ADD requirements.txt /requirements.txt
+ADD actor/requirements.txt /requirements.txt
 RUN pip install -r /requirements.txt
 
-ADD actor.py /actor.py
+ADD iptsite/models.py /models.py
+ADD actor/actor.py /actor.py
 
 CMD ["python", "/actor.py"]
