--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -19,7 +19,7 @@ django:
     environment:
         "IPT_INSTANCE": "dev"
         "AGAVE_CLIENT_KEY": "_6ofb8FswesLLarCOfXkVk1suUga"
-        "AGAVE_CLIENT_SECRET": ""
+        "AGAVE_CLIENT_SECRET":
         "AGAVE_BASE_URL": "https://api.tacc.utexas.edu"
         "ACTOR_URL": "https://api.tacc.utexas.edu/actors/v2/<uuid>"
         "ACTOR_EXECUTION_IP": ""
