--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -16,13 +16,13 @@ django:
     hostname: ipt-web.tacc.utexas.edu
     ports:
         - "8000:8000"
+    extra_hosts:
+        - "ipt-web.tacc.utexas.edu:172.17.0.1"
     environment:
         "IPT_INSTANCE": "dev"
         "AGAVE_CLIENT_KEY": "_6ofb8FswesLLarCOfXkVk1suUga"
         "AGAVE_CLIENT_SECRET":
         "AGAVE_BASE_URL": "https://api.tacc.utexas.edu"
-        "ACTOR_URL": "https://api.tacc.utexas.edu/actors/v2/<uuid>"
-        "ACTOR_EXECUTION_IP": ""
-        "ACTOR_EXECUTION_SSH_USER": ""
-        "ACTOR_EXECUTION_SSH_KEY": ""
+        "AGAVE_SERVICE_TOKEN":
+        "ACTOR_ID": "bde9c71e-9118-11e7-9e6c-0242ac110005-059"
 
