--- a/docker/nginx/nginx.conf
+++ b/docker/nginx/nginx.conf
@@ -25,24 +25,30 @@ http {
 
     server {
         listen  80 default_server;
-        server_name  ipt-web.tacc.utexas.edu;
-        return 301  https://ipt-web.tacc.utexas.edu$request_uri;
+        server_name  ipt.tacc.cloud;
+        return 302  https://ipt.tacc.cloud$request_uri;
     }
 
     server {
         listen  443 ssl;
-        server_name ipt-web.tacc.utexas.edu;
+        server_name ipt.tacc.cloud;
 
 
-        if ($host != "ipt-web.tacc.utexas.edu") {
-            rewrite ^(.*)$ https://ipt-web.tacc.utexas.edu$1;
+        if ($host != "ipt.tacc.cloud") {
+            rewrite ^(.*)$ https://ipt.tacc.cloud$1;
         }
 
         charset  utf-8;
 
-        ssl_certificate             /etc/ssl/ipt-web/ipt-web.tacc.utexas.edu.bundle.crt;
-        ssl_certificate_key         /etc/ssl/ipt-web/ipt-web.tacc.utexas.edu.key;
-#        ssl_dhparam                 /etc/ssl/dhparam.pem;
+# These for ipt-web.tacc.utexas.edu --
+#        ssl_certificate             /etc/ssl/ipt-web/ipt-web.tacc.utexas.edu.bundle.crt;
+#        ssl_certificate_key         /etc/ssl/ipt-web/ipt-web.tacc.utexas.edu.key;
+# --
+#
+# These for ipt.tacc.cloud --
+        ssl_certificate            /etc/ssl/ipt-web/ipt_tacc_cloud_bundle.cer;
+        ssl_certificate_key         /etc/ssl/ipt-web/ipt_tacc_cloud_key.pem;
+# --
         ssl_prefer_server_ciphers   on;
         ssl_protocols               TLSv1 TLSv1.1 TLSv1.2;
         ssl_ciphers                 "ECDHE-RSA-AES256-GCM-SHA384:ECDHE-RSA-AES128-GCM-SHA256:DHE-RSA-AES256-GCM-SHA384:DHE-RSA-AES128-GCM-SHA256:ECDHE-RSA-AES256-SHA384:ECDHE-RSA-AES128-SHA256:ECDHE-RSA-AES256-SHA:ECDHE-RSA-AES128-SHA:DHE-RSA-AES256-SHA256:DHE-RSA-AES128-SHA256:DHE-RSA-AES256-SHA:DHE-RSA-AES128-SHA:ECDHE-RSA-DES-CBC3-SHA:EDH-RSA-DES-CBC3-SHA:AES256-GCM-SHA384:AES128-GCM-SHA256:AES256-SHA256:AES128-SHA256:AES256-SHA:AES128-SHA:DES-CBC3-SHA:HIGH:!aNULL:!eNULL:!EXPORT:!DES:!MD5:!PSK:!RC4";
@@ -58,6 +64,10 @@ http {
         }
 
         location /static {
+            alias /iptweb/static;
+        }
+
+        location /iptweb/iptsite/static {
             alias /iptweb/static;
         }
 
