--- a/requirements.txt
+++ b/requirements.txt
@@ -1,2 +1,8 @@
 agavepy==0.4.0
 Django==1.11.2
+django-bootstrap3==9.0.0
+django-nocaptcha-recaptcha==0.0.19
+ipdb==0.10.3
+
+# pytas
+-e git+https://bitbucket.org/taccaci/pytas.git@v1.3.0#egg=pytas-1.3.0
